<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/create_new_team_page_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/create_team"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_team_name_id"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/team_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_new_team_page_id" />

        <ImageView
            android:id="@+id/new_team_logo_id"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:background="@android:drawable/presence_busy"
            android:contentDescription="team logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/new_team_name_id"
            app:layout_constraintTop_toBottomOf="@id/create_new_team_page_id" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerDevListId"
            android:layout_width="403dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/create_new_team_btn_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_team_logo_id" />


        <Button
            android:id="@+id/create_new_team_btn_id"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="36dp"
            android:text="@string/create_new_team"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
