<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="home" type="com.example.jiraclone.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_create_page_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:text="@string/create_task"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/task_create_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/task_title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_members" />

            <EditText
                android:id="@+id/task_create_title_name_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corner"
                android:inputType="text|textNoSuggestions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_create_title_id" />

            <TextView

                android:id="@+id/task_create_content_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/task_create_title_id"
                app:layout_constraintTop_toBottomOf="@+id/task_create_title_name_id" />

            <EditText
                android:id="@+id/task_create_description_id"
                android:layout_width="0dp"
                android:layout_height="277dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_corner"
                android:gravity="top"
                android:inputType="text|textNoSuggestions"
                app:layout_constraintBottom_toTopOf="@+id/task_create_button_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_create_content_id"
                app:layout_constraintVertical_bias="0.868" />

            <Button
                android:id="@+id/task_create_button_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:textColor="@android:color/white"
                android:onClick="@{() -> home.createTask()}"
                android:text="@string/add_task"
                android:textAllCaps="false"
                android:background="@drawable/rounded_corner_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_teams"
                android:layout_width="219dp"
                android:layout_height="22dp"
                android:layout_marginTop="20dp"
                app:entries="@{home.teamsList}"
                app:newValue="@{home.observeCurrentTeamEvent()}"
                app:onItemSelected="@{}"
                app:layout_constraintEnd_toEndOf="@+id/task_create_title_name_id"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/task_create_title_name_id"
                app:layout_constraintTop_toBottomOf="@+id/task_create_page_id" />

            <Spinner
                android:id="@+id/spinner_members"
                android:layout_width="219dp"
                android:layout_height="22dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/task_create_title_name_id"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/task_create_title_name_id"
                app:layout_constraintTop_toBottomOf="@+id/spinner_teams" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
